// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run config mf-build > dist structure 1`] = `
{
  "files": [
    {
      "files": [
        {
          "name": "App.d.ts",
        },
        {
          "name": "Counter.d.ts",
        },
        {
          "files": [
            {
              "files": [
                {
                  "name": "App.d.ts",
                },
                {
                  "name": "Counter.d.ts",
                },
                {
                  "name": "index.d.ts",
                },
              ],
              "name": "src",
            },
          ],
          "name": "compiled-types",
        },
        {
          "name": "index.d.ts",
        },
      ],
      "name": "@mf-types",
    },
    {
      "name": "@mf-types.d.ts",
    },
    {
      "name": "@mf-types.zip",
    },
    {
      "name": "__federation_expose_App.mf.es2017.production.css",
    },
    {
      "name": "__federation_expose_App.mf.es2017.production.js",
    },
    {
      "name": "__federation_expose_Counter.mf.es2017.production.js",
    },
    {
      "name": "__federation_expose_default_export.mf.es2017.production.js",
    },
    {
      "name": "index.mf.es2017.production.js",
    },
    {
      "name": "mf-manifest.json",
    },
    {
      "name": "mf-stats.json",
    },
    {
      "name": "test_remote.mf.es2017.production.js",
    },
  ],
  "name": "dist",
}
`;

exports[`Run config mf-build-custom-dir > dist structure 1`] = `
{
  "files": [
    {
      "files": [
        {
          "files": [
            {
              "name": "App.d.ts",
            },
            {
              "name": "Counter.d.ts",
            },
            {
              "files": [
                {
                  "files": [
                    {
                      "name": "App.d.ts",
                    },
                    {
                      "name": "Counter.d.ts",
                    },
                    {
                      "name": "index.d.ts",
                    },
                  ],
                  "name": "src",
                },
              ],
              "name": "compiled-types",
            },
            {
              "name": "index.d.ts",
            },
          ],
          "name": "@mf-types",
        },
        {
          "name": "@mf-types.d.ts",
        },
        {
          "name": "@mf-types.zip",
        },
        {
          "name": "__federation_expose_App.mf.es2017.production.css",
        },
        {
          "name": "__federation_expose_App.mf.es2017.production.js",
        },
        {
          "name": "__federation_expose_Counter.mf.es2017.production.js",
        },
        {
          "name": "__federation_expose_default_export.mf.es2017.production.js",
        },
        {
          "name": "index.mf.es2017.production.js",
        },
        {
          "name": "mf-manifest.json",
        },
        {
          "name": "mf-stats.json",
        },
        {
          "name": "test_remote.mf.es2017.production.js",
        },
      ],
      "name": "custom",
    },
  ],
  "name": "dist",
}
`;
